# Traffic-Sign-Detection-and-Recognition-System

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  setup_env_example.cmake  temp.cpp
config/: config.h
docs/: architecture.md  class_diagram.md  design_choices.md  inference_pipeline.md  model_training.md  user_guide.md
include/TSDR/: convert_cnn_labels.h  detection.h  draw.h  image_handler.h  interface_engine.h  recognition.h  video_handler.h
models/: cnn_recognition.onnx
src/: main.cpp
src/config/: config.h  config_template.h
src/pipeline/: detection.cpp  detection.h  image_handler.cpp  interface_engine.cpp  recognition.cpp  recognition.h  runner.cpp  runner.h  video_handler.cpp
src/test/cnn_test/: cnn_test.cpp
src/test/yolo_test/: detection.cpp  yolo_test.cpp  yolo_utils.cpp  yolo_video.cpp
src/test/yolo_test/include/: detection.h  yolo_utils.h
src/utils/: convert_cnn_labels.cpp  draw.cpp  draw.h
tests/: test_classification.cpp  test_detection.cpp  test_integration.cpp
training/: cnn.ipynb  yolov5s.ipynb
